Fix ball not stopping completely when aiming

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,183 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+CS328-Minigolf.exe
+CS328-Minigolf_BurstDebugInformation_DoNotShip/Data/Plugins/x86_64/lib_burst_generated.txt
+CS328-Minigolf_Data/app.info
+CS328-Minigolf_Data/boot.config
+CS328-Minigolf_Data/globalgamemanagers
+CS328-Minigolf_Data/globalgamemanagers.assets
+CS328-Minigolf_Data/level0
+CS328-Minigolf_Data/level0.resS
+CS328-Minigolf_Data/level1
+CS328-Minigolf_Data/level1.resS
+CS328-Minigolf_Data/level2
+CS328-Minigolf_Data/level2.resS
+CS328-Minigolf_Data/level3
+CS328-Minigolf_Data/level3.resS
+CS328-Minigolf_Data/Managed/Assembly-CSharp.dll
+CS328-Minigolf_Data/Managed/Mono.Security.dll
+CS328-Minigolf_Data/Managed/mscorlib.dll
+CS328-Minigolf_Data/Managed/netstandard.dll
+CS328-Minigolf_Data/Managed/Newtonsoft.Json.dll
+CS328-Minigolf_Data/Managed/System.ComponentModel.Composition.dll
+CS328-Minigolf_Data/Managed/System.Configuration.dll
+CS328-Minigolf_Data/Managed/System.Core.dll
+CS328-Minigolf_Data/Managed/System.Data.DataSetExtensions.dll
+CS328-Minigolf_Data/Managed/System.Data.dll
+CS328-Minigolf_Data/Managed/System.dll
+CS328-Minigolf_Data/Managed/System.Drawing.dll
+CS328-Minigolf_Data/Managed/System.EnterpriseServices.dll
+CS328-Minigolf_Data/Managed/System.IO.Compression.dll
+CS328-Minigolf_Data/Managed/System.IO.Compression.FileSystem.dll
+CS328-Minigolf_Data/Managed/System.Net.Http.dll
+CS328-Minigolf_Data/Managed/System.Numerics.dll
+CS328-Minigolf_Data/Managed/System.Runtime.dll
+CS328-Minigolf_Data/Managed/System.Runtime.Serialization.dll
+CS328-Minigolf_Data/Managed/System.Security.dll
+CS328-Minigolf_Data/Managed/System.ServiceModel.Internals.dll
+CS328-Minigolf_Data/Managed/System.Transactions.dll
+CS328-Minigolf_Data/Managed/System.Xml.dll
+CS328-Minigolf_Data/Managed/System.Xml.Linq.dll
+CS328-Minigolf_Data/Managed/Unity.2D.Animation.Runtime.dll
+CS328-Minigolf_Data/Managed/Unity.2D.Common.Runtime.dll
+CS328-Minigolf_Data/Managed/Unity.2D.IK.Runtime.dll
+CS328-Minigolf_Data/Managed/Unity.Burst.Cecil.dll
+CS328-Minigolf_Data/Managed/Unity.Burst.Cecil.Mdb.dll
+CS328-Minigolf_Data/Managed/Unity.Burst.Cecil.Pdb.dll
+CS328-Minigolf_Data/Managed/Unity.Burst.Cecil.Rocks.dll
+CS328-Minigolf_Data/Managed/Unity.Burst.dll
+CS328-Minigolf_Data/Managed/Unity.Burst.Unsafe.dll
+CS328-Minigolf_Data/Managed/Unity.InternalAPIEngineBridge.001.dll
+CS328-Minigolf_Data/Managed/Unity.Mathematics.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Analytics.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Configuration.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Device.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Environments.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Environments.Internal.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Internal.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Networking.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Registration.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Scheduler.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Telemetry.dll
+CS328-Minigolf_Data/Managed/Unity.Services.Core.Threading.dll
+CS328-Minigolf_Data/Managed/Unity.TextMeshPro.dll
+CS328-Minigolf_Data/Managed/Unity.Timeline.dll
+CS328-Minigolf_Data/Managed/Unity.VisualScripting.Antlr3.Runtime.dll
+CS328-Minigolf_Data/Managed/Unity.VisualScripting.Core.dll
+CS328-Minigolf_Data/Managed/Unity.VisualScripting.Flow.dll
+CS328-Minigolf_Data/Managed/Unity.VisualScripting.State.dll
+CS328-Minigolf_Data/Managed/UnityEngine.AccessibilityModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.AIModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.AndroidJNIModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.AnimationModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ARModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.AssetBundleModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.AudioModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ClothModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ClusterInputModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ClusterRendererModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.CoreModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.CrashReportingModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.DirectorModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.dll
+CS328-Minigolf_Data/Managed/UnityEngine.DSPGraphModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.GameCenterModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.GIModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.GridModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.HotReloadModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ImageConversionModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.IMGUIModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.InputLegacyModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.InputModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.JSONSerializeModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.LocalizationModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.NVIDIAModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ParticleSystemModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.PerformanceReportingModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.Physics2DModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.PhysicsModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ProfilerModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.RuntimeInitializeOnLoadManagerInitializerModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.ScreenCaptureModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.SharedInternalsModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.SpriteMaskModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.SpriteShapeModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.StreamingModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.SubstanceModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.SubsystemsModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.TerrainModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.TerrainPhysicsModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.TextCoreFontEngineModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.TextCoreTextEngineModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.TextRenderingModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.TilemapModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.TLSModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UI.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UIElementsModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UIElementsNativeModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UIModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UmbraModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UNETModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityAnalyticsModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityConnectModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityCurlModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityTestProtocolModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityWebRequestModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.VehiclesModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.VFXModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.VideoModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.VirtualTexturingModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.VRModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.WindModule.dll
+CS328-Minigolf_Data/Managed/UnityEngine.XRModule.dll
+CS328-Minigolf_Data/Plugins/x86_64/lib_burst_generated.dll
+CS328-Minigolf_Data/resources.assets
+CS328-Minigolf_Data/resources.assets.resS
+CS328-Minigolf_Data/Resources/unity default resources
+CS328-Minigolf_Data/Resources/unity_builtin_extra
+CS328-Minigolf_Data/RuntimeInitializeOnLoads.json
+CS328-Minigolf_Data/ScriptingAssemblies.json
+CS328-Minigolf_Data/sharedassets0.assets
+CS328-Minigolf_Data/sharedassets0.assets.resS
+CS328-Minigolf_Data/sharedassets1.assets
+CS328-Minigolf_Data/sharedassets2.assets
+CS328-Minigolf_Data/sharedassets2.assets.resS
+CS328-Minigolf_Data/sharedassets3.assets
+CS328-Minigolf_Data/StreamingAssets/UnityServicesProjectConfiguration.json
+MonoBleedingEdge/EmbedRuntime/mono-2.0-bdwgc.dll
+MonoBleedingEdge/EmbedRuntime/MonoPosixHelper.dll
+MonoBleedingEdge/etc/mono/2.0/Browsers/Compat.browser
+MonoBleedingEdge/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+MonoBleedingEdge/etc/mono/2.0/machine.config
+MonoBleedingEdge/etc/mono/2.0/settings.map
+MonoBleedingEdge/etc/mono/2.0/web.config
+MonoBleedingEdge/etc/mono/4.0/Browsers/Compat.browser
+MonoBleedingEdge/etc/mono/4.0/DefaultWsdlHelpGenerator.aspx
+MonoBleedingEdge/etc/mono/4.0/machine.config
+MonoBleedingEdge/etc/mono/4.0/settings.map
+MonoBleedingEdge/etc/mono/4.0/web.config
+MonoBleedingEdge/etc/mono/4.5/Browsers/Compat.browser
+MonoBleedingEdge/etc/mono/4.5/DefaultWsdlHelpGenerator.aspx
+MonoBleedingEdge/etc/mono/4.5/machine.config
+MonoBleedingEdge/etc/mono/4.5/settings.map
+MonoBleedingEdge/etc/mono/4.5/web.config
+MonoBleedingEdge/etc/mono/browscap.ini
+MonoBleedingEdge/etc/mono/config
+MonoBleedingEdge/etc/mono/mconfig/config.xml
+ProjectSettings/BurstAotSettings_StandaloneWindows.json
+ProjectSettings/CommonBurstAotSettings.json
+ProjectSettings/EditorBuildSettings.asset
+ProjectSettings/TimelineSettings.asset
+UnityCrashHandler64.exe
+UnityPlayer.dll
+ProjectSettings/EditorBuildSettings.asset
+ProjectSettings/EditorBuildSettings.asset
+CS328-Minigolf_Data/sharedassets1.assets.resS
+CS328-Minigolf_Data/sharedassets3.assets.resS
+ProjectSettings/EditorBuildSettings.asset
